# ondevice-llm-toolkit

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
incubator/: README.md
incubator/llm-inference-starters/: .gitignore  LICENSE  README.md
incubator/llm-inference-starters/.github/workflows/: ci.yml
incubator/llm-inference-starters/common/: README.md  pyproject.toml
incubator/llm-inference-starters/common/src/llmstart/: __init__.py  cli.py  client.py  metrics.py  streaming.py
incubator/llm-inference-starters/common/tests/: test_metrics.py  test_streaming.py
incubator/llm-inference-starters/docs/: choosing-an-engine.md  quantization-cheatsheet.md
incubator/llm-inference-starters/engines/llama-cpp/: README.md  serve.sh
incubator/llm-inference-starters/engines/mlx/: README.md  serve.sh
incubator/llm-inference-starters/engines/ollama/: Modelfile  README.md
incubator/llm-inference-starters/engines/sglang/: README.md  docker-compose.yml
incubator/llm-inference-starters/engines/tensorrt-llm/: README.md
incubator/llm-inference-starters/engines/vllm/: README.md  docker-compose.yml
incubator/llm-inference-starters/examples/: chat_streaming.py  structured_output.py  tool_calling.py
incubator/local-agent-bench/: .gitignore  README.md  pyproject.toml
incubator/local-agent-bench/.github/workflows/: ci.yml
incubator/local-agent-bench/src/labench/: __init__.py  __main__.py  cli.py  client.py  report.py  runner.py  scoring.py  stats.py  tasks.py
incubator/local-agent-bench/tasks/: core.yaml
incubator/local-agent-bench/tests/: test_runner.py  test_scoring.py  test_stats.py  test_tasks.py
incubator/profile/: README.md
native/: odlt_run.cpp
scripts/: build_native.sh  publish_incubator.sh
src/odlt/: __init__.py  __main__.py  bench.py  cli.py  config.py  constants.py  errors.py  gguf.py  hf.py  llama.py  logging_utils.py  models.py  process.py  report.py  utils.py
tests/: test_checksum.py  test_config.py  test_manifest.py  test_report.py
