[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ondevice-llm-toolkit"
version = "0.1.0"
description = "Local benchmarking and GGUF utilities for llama.cpp"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jorge Grisman" }]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.6",
  "rich>=13.7",
  "matplotlib>=3.8",
  "huggingface_hub>=0.23",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.urls]
Homepage = "https://github.com/jorgeutd/ondevice-llm-toolkit"

[project.scripts]
odlt = "odlt.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
