[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-agent-bench"
version = "0.1.0"
description = "Statistical benchmark for tool calling and structured outputs on local LLMs served via OpenAI-compatible APIs (llama.cpp, vLLM, SGLang, Ollama)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jorge Lopez Grisman" }]
keywords = ["llm", "benchmark", "tool-calling", "function-calling", "llama.cpp", "structured-output", "agents"]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.6",
  "httpx>=0.27",
  "rich>=13.7",
  "PyYAML>=6.0",
  "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/jorgeutd/local-agent-bench"

[project.scripts]
labench = "labench.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
labench = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# B008: typer's declarative Option/Argument defaults are the idiomatic API.
"src/labench/cli.py" = ["B008"]
