[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmstart"
version = "0.1.0"
description = "Probe and micro-benchmark any OpenAI-compatible LLM inference endpoint (TTFT, decode tokens/sec)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jorge Lopez Grisman" }]
dependencies = [
  "typer>=0.12.3",
  "httpx>=0.27",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
llmstart = "llmstart.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llmstart = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# B008: typer's declarative Option defaults are the idiomatic API.
"src/llmstart/cli.py" = ["B008"]
